changes based on review